--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,20 @@
 Package: pcdid
 Type: Package
-Title: What the Package Does (Short Line)
+Title: Principal Components Difference-in-Differences
 Version: 1.0
 Date: 2025-07-12
-Author: Who wrote it
-Maintainer: Who to complain to <yourfault@somewhere.net>
+Authors@R: c(person("Xiaolei", "Wang", , "adamwang15@gmail.com", role = c("aut", "cre"), comment = c(ORCID = "0009-0005-6192-9061")), person("Marc", "Chan", , "marc.chan@unimelb.edu.au", role = c("aut"), comment = c(ORCID = "0000-0002-1010-7587")))
+Maintainer: Xiaolei Wang <adamwang15@gmail.com>
 Description: More about what it does (maybe more than one line).
-License: What license is it under?
+License: MIT + file LICENSE
+Imports:
+    stats,
+    sandwich,
+    lmtest
 Depends: 
     R (>= 3.5)
 LazyData: true
+RoxygenNote: 7.3.2
+Encoding: UTF-8
+URL: https://github.com/adamwang15/pcdid
+BugReports: https://github.com/adamwang15/pcdid/issues
