--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,3 +18,6 @@ RoxygenNote: 7.3.2
 Encoding: UTF-8
 URL: https://github.com/adamwang15/pcdid
 BugReports: https://github.com/adamwang15/pcdid/issues
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
